Cambios en BD/USUARIOSFORM

--- a/BasureroWeb/BasureroWeb.csproj
+++ b/BasureroWeb/BasureroWeb.csproj
@@ -1958,13 +1958,19 @@
     <Compile Include="Models\ciudad.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\detalleestado.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\detalleubicacion.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\detalleusuariobasurero.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\estadobasurero.cs">
+    <Compile Include="Models\estado.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\estadousuario.cs">
+    <Compile Include="Models\estadobasurero.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Models.Context.cs">
