--- a/BasureroWeb/Web.config
+++ b/BasureroWeb/Web.config
@@ -69,6 +69,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="pruebaEntities" connectionString="metadata=res://*/Modelo.Models.csdl|res://*/Modelo.Models.ssdl|res://*/Modelo.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=123;persistsecurityinfo=True;database=prueba&quot;" providerName="System.Data.EntityClient" />
-    <add name="basureroEntities" connectionString="metadata=res://*/Models.Models.csdl|res://*/Models.Models.ssdl|res://*/Models.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=123;database=basurero&quot;" providerName="System.Data.EntityClient" />
+    <add name="basureroEntities" connectionString="metadata=res://*/Models.Models.csdl|res://*/Models.Models.ssdl|res://*/Models.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=basurero&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
