Cambio logico de codigo fuente limpio

--- a/BasureroWeb/Web.config
+++ b/BasureroWeb/Web.config
@@ -15,7 +15,7 @@
       <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
   </system.webServer>
-  <system.web>
+  <system.web>    
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
     </httpHandlers>
@@ -76,7 +76,9 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
   </system.data>
   <entityFramework>
     <providers>
@@ -91,11 +93,10 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="pruebaEntities" connectionString="metadata=res://*/Modelo.Models.csdl|res://*/Modelo.Models.ssdl|res://*/Modelo.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=123;persistsecurityinfo=True;database=prueba&quot;" providerName="System.Data.EntityClient" />
-    <add name="basureroEntities" connectionString="metadata=res://*/Models.Models.csdl|res://*/Models.Models.ssdl|res://*/Models.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=basurero;Allow Zero Datetime=True;Convert Zero Datetime=True;&quot;"
-      providerName="System.Data.EntityClient"/>
     <add name="basureroConnectionString" connectionString="server=localhost;user id=root;database=basurero" providerName="MySql.Data.MySqlClient" />
     <add name="constr" connectionString="server=localhost;user id=root;database=basurero" />
+    <add name="pruebaEntities" connectionString="metadata=res://*/Modelo.Models.csdl|res://*/Modelo.Models.ssdl|res://*/Modelo.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=123;persistsecurityinfo=True;database=prueba&quot;" providerName="System.Data.EntityClient" />
+    <add name="basureroEntities" connectionString="metadata=res://*/Models.Models.csdl|res://*/Models.Models.ssdl|res://*/Models.Models.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=basurero&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
